ViTables ChangeLog
==================
** December 24, 2019 **
Release 3.0.1 is ready to be published.

** December 23, 2019 **
Support for pandas time series has been updated.

** December 15, 2019 **
Fixed a couple of bugs in time_series.py.

Ignore deprecation warnings coming from numpy in csvutils.py.

** December 13, 2019 **
Package version has been updated.

Splash screen has been updated.

Copyright and URLs have been updated.

.txt files have been updated.

** December 12, 2019 **
Changed script entry point in setup.py.

** December 10, 2019 **
Small style changes applied to start.py and setup.py.

** December 21, 2018 **
Fixed sip imports and setup.py syntax.

** September 26, 2018 **
Fixed issue #88 (dataframe lost columns).

** October 20, 2017 **
Added support for multi-dim EArrays.

** October 19, 2017 **
Fixed issue #86 (showing large EArrays).

Fixed issue #83, really.

** October 5, 2017 **
Fixed issue #83.

** September 28, 2017 **
Properly resolve nested links.

** September 25, 2017 **
Added tests for the filenodes support.

** September 23, 2017 **
Support for filenodes has been improved.

** September 21, 2017 **
Added basic support for filenodes.

** August 13, 2017 **
Fixed a few PEP8 issues.

** July 17, 2017 **
Import/export CSV capabilities have been integrated in the ViTables core.

** June 09, 2017 **
Added icons for creating Desktop shortcuts on Unices.

** June 07, 2017 **
Fixed a minor bug in the Preferences dialog.

** June 06, 2017 **
The plugins system has been slightly refactored and simplified.

** June 02, 2017 **
Sphinx configuration file has been updated.

** May 31, 2017 **
The Users' Guide has been updated.

** May 27, 2017 **
Last minute changes prior to publishing.

** May 24, 2017 **
Packaging related files have been updated.

The Users' Guide has been updated.

Some .txt files have been updated.

Calls to str(object, 'UTF-8') have been removed.
