@@ -15,5 +15,4 @@ For installation instructions see INSTALL.txt.
 Feel free to subscribe to the ViTables users group [1]_ and to report bugs and
 send suggestions or features requests.
 
- .. _[1]: https://groups.google.com/forum/#!forum/vitables-users
- 
+ .. [1] https://groups.google.com/forum/#!forum/vitables-users
